Fix: switch to margin as gap property does not work on JMP

--- a/Theme/ElegantFin-jellyfin-theme-build-latest.css
+++ b/Theme/ElegantFin-jellyfin-theme-build-latest.css
@@ -21,7 +21,11 @@ html {
 
 .itemsContainer,
 .vertical-list {
-    gap: .75em;
+    /* gap: .75em; */
+}
+
+.card {
+    margin: .375em;
 }
 
 [dir=ltr] .itemsContainer>.card>.cardBox {
